# ffi-utensils

./: LICENSE
crates/block_mut/: Cargo.toml  README.md  build.rs
crates/block_mut/native/: test.m
crates/block_mut/src/: abi.rs  block.rs  box_block.rs  ffi.rs  global.rs  lib.rs  stack.rs  traits.rs
crates/block_mut/tests/: with_native.rs
crates/dump-header/: Cargo.toml
crates/dump-header/sample/: t.h
crates/dump-header/src/: attributes.rs  availability.rs  cli.rs  collect_filepaths.rs  error.rs  fixture.rs  framework.rs  headerfiletree.rs  lib.rs  main.rs  parser.rs  traverse.rs  utils.rs
crates/dump-header/src/entity/: attributes.rs  availability.rs  entry.rs  mod.rs  vardecl.rs
crates/dump-header/src/typ/: mod.rs  typekind.rs
crates/dump-header/tests/: test_objc.rs
crates/dump-header/tests/fixtures/: fixture001.toml  fixture002.toml
crates/dump-header/tests/fixtures/objc/: fixture001.toml
crates/fn_signature/: Cargo.toml  LICENSE.txt
crates/fn_signature/src/: encode.rs  fn_signature.rs  lib.rs
crates/impl_macro/: Cargo.toml
crates/impl_macro/examples/: e01.rs  e02_once_cell.rs  e03_lazy_static.rs
crates/impl_macro/src/: lib.rs
