[package]
name = "block_mut"
# Remember to update html_root_url in lib.rs
version = "0.4.0"
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2021"
rust-version = "1.60"

description = "Apple's C language extension of blocks"
keywords = ["objective-c", "macos", "ios", "blocks"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "os::macos-apis",
    "external-ffi-bindings",
]
readme = "README.md"
repository = "https://github.com/tamuratak/ffi-utensils/"
license = "MIT"

[features]
# The default runtime is Apple's. Other platforms will probably error if the
# correct feature flag is not specified.
default = ["std", "apple"]

# Currently not possible to turn off, put here for forwards compatibility.
std = ["alloc", "objc2/std"]
alloc = ["objc2/alloc"]

# Link to Apple's libclosure (exists in libSystem).
apple = ["objc2/apple"]

# Expose private ffi functions and statics.
unstable-private = []

# For better documentation on docs.rs.
unstable-docsrs = []

[dependencies]
objc2 = {version = "0.5.0", default-features = false }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
features = ["unstable-docsrs", "unstable-private"]
targets = [
    # MacOS
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    # "i686-apple-darwin",
    # iOS
    "aarch64-apple-ios",
    "x86_64-apple-ios",
    # "i386-apple-ios",
]
