[package]
name = "impl_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
objc-sys = "0.3.2"
objc2 = "0.5.0"
prettyplease = "0.2.17"
proc-macro2 = "1.0.79"
syn = "2.0.57"
